# bfuu-script-builder

./: .gitignore  app.py  hymns.csv  pyproject.toml  requirements.txt  seven_principles.csv  six_sources.csv
templates/: base.html  index.html  navbar.html  script.html
